# web-security-audit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ai_usage.md  api.md  architecture.md  dependency-security.md  docker-check.md  static-analysis.md
src/websec_audit/: __init__.py  cli.py  crawler.py  http_client.py  models.py  parser.py  scanner.py  url_utils.py  web.py
src/websec_audit/checks/: __init__.py  csrf.py  headers.py  payloads.py  sqli.py  xss.py
src/websec_audit/reporting/: html_report.py
tests/: test_active_scanners.py  test_cli.py  test_crawler.py  test_headers_csrf.py  test_http_client.py  test_parser.py  test_reporting.py  test_scanner_report.py  test_web.py
