[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-security-audit"
version = "0.1.0"
description = "CLI scanner for auditing common web application security issues."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alya Holhalova" }]
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12.3",
    "playwright>=1.44.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.9",
    "pip-audit>=2.7.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
websec-audit = "websec_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]
ignore = [
    "S101",
    "S113",
]

[tool.pytest.ini_options]
addopts = "-q --cov=websec_audit --cov-report=term-missing"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
